Fix some error
